[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "temporal_pyramid_moe"
version = "0.1.0"
description = "Temporal Pyramid MoE : Hierarchical pattern decomposition for univariate MoE long-range forecasting"
authors = [
    {name = "Yvann VINCENT", email = "yvann.vincent@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "flake8",
    "black",
    "isort",
]

[tool.black]
line-length = 88
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88