[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mamba_forecast"
version = "0.1.0"
description = "Efficient Mamba Models for Timeseries Forecasting"
authors = [
    {name = "Yvann VINCENT", email = "yvann.vincent@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch==2.5.1",
    "lightning==2.5.1",
    "numpy>=1.20.0",
    "matplotlib>=3.5.0",
    "einops==0.8.1",
    "pandas==2.2.3",
    "pytest==8.3.5",
    "flake8==7.1.2",
    "black==25.1.0",
    "isort==6.0.1",
]

[tool.black]
line-length = 88
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88